RC: Style/TrailingComma has been split into two styles
https://github.com/bbatsov/rubocop/commit/7e6adfe33b2a18ecb7c9cdfb5dd64b153967b873

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,9 +26,11 @@ Style/BlockDelimiters:
   EnforcedStyle: semantic
   Enabled: true
 
-Style/TrailingComma:
+Style/TrailingCommaInArguments:
   EnforcedStyleForMultiline: comma
-  Enabled: true
+
+Style/TrailingCommaInLiteral:
+  EnforcedStyleForMultiline: comma
 
 Style/AlignParameters:
   EnforcedStyle: with_fixed_indentation
