Disable cop NestedParenthesizedCalls
Because it was reporting offences such as:

    Add parentheses to nested method call get :auth0_success_callback.
          expect(get :auth0_success_callback).to redirect_to(root_path)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^

We can re-enable it when it supports method arity or we can disable it
for specific methods which are commonly used without parens.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,9 @@ AllCops:
 Rails:
   Enabled: true
 
+Style/NestedParenthesizedCalls:
+  Enabled: false  # Disable until it's possible to configure for method arity.
+
 Metrics/LineLength:
   Max: 110
 
