--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,6 +28,9 @@ Metrics/MethodLength:
 Metrics/AbcSize:
   Max: 20
 
+Style/IndentArray:
+  EnforcedStyle: consistent
+
 Style/NestedParenthesizedCalls:
   Enabled: false  # TODO: Enable when possible to configure for method arity.
 
