--- a/.env.development.example
+++ b/.env.development.example
@@ -1,11 +1,16 @@
 AUTH_LOGIN_URL=example_url
 AUTH_LOGOUT_URL=example_url
 
-# Or set these instead if you use auth0.com
+# Or set these instead if you use auth0.com for authentication.
 AUTH0_CLIENT_ID=example_auth0_client_id
 AUTH0_CLIENT_SECRET=example_auth0_client_secret
 AUTH0_CONNECTION=example_auth0_connection_strategy
 AUTH0_DOMAIN=example_auth0_domain_without_protocol
+
+# Locales are two-letter country codes as defined in ISO 3166-1 alpha-2 codes.
+DEFAULT_DEPLOY_REGION=two-letter_region_code
+DEFAULT_DEPLOY_LOCALE=two-letter_country_code
+DEFAULT_HEROKU_DEPLOY_LOCALE=two-letter_country_code
 
 GITHUB_REPO_STATUS_ACCESS_TOKEN=example_token
 JIRA_HOST_NAME=hostname_of_your_jira_sandbox
