Adds slack notifier wrapper to send a message to a specific channel
Enables parsing of username in case the message is directed at a specific user

--- a/.env.development.example
+++ b/.env.development.example
@@ -17,3 +17,6 @@ DEPLOY_REGIONS=gb,us
 GITHUB_REPO_STATUS_ACCESS_TOKEN=example_token
 JIRA_HOST_NAME=hostname_of_your_jira_sandbox
 DATA_MAINTENANCE=false
+
+# Slack notifier Web hook
+SLACK_WEB_HOOK=my_slack_hook
