Ignore Style/BlockDelimiters cop for specs
In specs we use a lot of DSLs which violate the semantic block rule.
So we either disabled the cop for specific lines or wrote our specs
non-idiomatically; neither option is ideal.

Let's only enforce this cop for code, not for tests.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -38,6 +38,8 @@ Style/Documentation:
 
 Style/BlockDelimiters:
   EnforcedStyle: semantic
+  Exclude:
+    - 'spec/**/*'
 
 Style/TrailingCommaInArguments:
   EnforcedStyleForMultiline: comma
