Enable load to behave differently depending passed in flag
- For containerised (Heroku) servers we want to fetch on request
  (i.e. fetch happens in web dyno) because if we fetch in a background
  job then that job is executed in a new dyno which has its own
  filesystem.

- Refactor how load works to either fetch on request or use a cached
  git repo

- Remove explicit reference to load from feature files and use an
  environment setting for cucumber tests

Signed-off-by: Dennis Ideler <dennis.ideler@fundingcircle.com>

--- a/.env.development.example
+++ b/.env.development.example
@@ -19,3 +19,5 @@ JIRA_HOST_NAME=hostname_of_your_jira_sandbox
 DATA_MAINTENANCE=false
 
 SLACK_WEBHOOK=slack_notifier_webhook
+
+ALLOW_GIT_FETCH_ON_REQUEST=true
