--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -52,6 +52,8 @@ Style/MultilineBlockChain:
 
 Style/SignalException:
   EnforcedStyle: semantic
+  Exclude:
+    - 'app/use_cases/link_ticket.rb'
 
 Style/FrozenStringLiteralComment:
   Enabled: false  # TODO: Enable in separate PR.
