Alert if production deploy causes rollback
Also contains some refactoring. E.g. unit tests no longer have
integration testing since we do that in the cucumber feature.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,6 +21,10 @@ Metrics/LineLength:
 Metrics/MethodLength:
   Max: 15
 
+Metrics/ClassLength:
+  Exclude:
+    - 'app/models/git_repository.rb'
+
 Metrics/AbcSize:
   Max: 20
 
