Add unlink functionality
* added a button to post an unlink comment to Jira
* extended Jira event processor to remove a feature review

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,7 +16,10 @@ Rails/TimeZone:
   Enabled: false
 
 Metrics/LineLength:
-  Max: 110
+  Max: 120
+
+Style/SingleLineBlockParams:
+  Enabled: false
 
 Metrics/MethodLength:
   Max: 15
@@ -58,6 +61,7 @@ Style/SignalException:
   EnforcedStyle: semantic
   Exclude:
     - 'app/use_cases/link_ticket.rb'
+    - 'app/use_cases/unlink_ticket.rb'
 
 Style/FrozenStringLiteralComment:
   Enabled: enable
