--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 dependencies:
   pre:
-    - gem update bundler
+    - gem install bundler --no-doc
 test:
   override:
     - bundle exec rake spec
