Add build types - unit and integration
Integration test event will present whether the integration tests(cukes) passed successfully or not for a given code version.
They will be stored as integration build type, unit tests will be stored as unit build type
An url column is added to Snapshots::Build for all type of builds
Display both types of test results on the feature review page

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -11,7 +11,17 @@
 Metrics/ClassLength:
   Max: 150
 
+
+# Offense count: 1
+# Configuration parameters: AllowHeredoc, AllowURI, URISchemes, IgnoreCopDirectives, IgnoredPatterns.
+# URISchemes: http, https
+Metrics/LineLength:
+  Exclude:
+    - 'app/decorators/feature_review_with_statuses.rb'
+
 # Offense count: 1
 # Configuration parameters: CountKeywordArgs.
 Metrics/ParameterLists:
   Max: 6
+  Exclude:
+    - 'app/decorators/feature_review_with_statuses.rb'
