Skip ci for dependabot branches
If you want to run the build go to circleci and click rebuild

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,9 @@ version: 2
 
 jobs:
   build:
+    branches:
+      ignore:
+        - /dependabot\/.*/
     docker:
       - image: circleci/ruby:2.3.6
         environment:
