--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - run: sudo apt-get install -y cmake postgresql-client
       - checkout
       - run: cp .env.development.example .env.development
-      - run:  gem install bundler -v '1.16.1'
+      - run:  gem install bundler
       - restore_cache:
           key: shipment_tracker-gems-{{ checksum "Gemfile.lock" }}
       - run: bundle check || bundle install
