--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 ruby_image: &ruby_image
-  image: circleci/ruby:2.3.6
+  image: circleci/ruby:2.3.6-node
   environment:
     BUNDLE_JOBS: 3
     BUNDLE_RETRY: 3
