--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       AUTH0_CONNECTION: fundingcircle.com
       AUTH0_DOMAIN: fundingcircle.auth0.com
       GITHUB_REPO_READ_TOKEN:
+      GIT_REPOSITORY_CACHE_DIR: /tmp/git
       PROTECT_STDOUT: 'true'
       RAILS_ENV: "${RAILS_ENV:-development}"
       SHIPMENT_TRACKER_DATABASE_HOST: postgres
@@ -24,11 +25,14 @@ services:
       - 127.0.0.1:1201:1201
     depends_on:
       - postgres
+    volumes:
+      - git:/tmp/git
 
   update_git_loop:
     image: shipment_tracker
     command: sh -c 'bundle exec rake db:setup && exec bundle exec rake jobs:update_git_loop'
     environment:
+      GIT_REPOSITORY_CACHE_DIR: /tmp/git
       PROTECT_STDOUT: 'true'
       RAILS_ENV: "${RAILS_ENV:-development}"
       SHIPMENT_TRACKER_DATABASE_HOST: postgres
@@ -38,6 +42,11 @@ services:
       SSH_USER: git
       SSH_PUBLIC_KEY:
       SSH_PRIVATE_KEY:
+    user: root
+    depends_on:
+      - postgres
+    volumes:
+      - git:/tmp/git
 
   postgres:
     image: postgres:9.4-alpine
@@ -48,3 +57,4 @@ services:
 
 volumes:
   pgdata:
+  git:
