--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
     image: shipment_tracker
-    command: sh -c 'bundle exec rake db:setup && exec bundle exec rails server --binding=0.0.0.0 --port 1201'
+    command: sh -c 'bundle exec rake db:create db:migrate && exec bundle exec rails server --binding=0.0.0.0 --port 1201'
     environment:
       AUTH0_CLIENT_ID: Y9ltgcdXUkNA4hRDWuP0nxDaZVdIskBM
       AUTH0_CLIENT_SECRET:
@@ -30,7 +30,7 @@ services:
 
   update_git_loop:
     image: shipment_tracker
-    command: sh -c 'bundle exec rake db:setup && exec bundle exec rake jobs:update_git_loop'
+    command: sh -c 'bundle exec rake db:create db:migrate && exec bundle exec rake jobs:update_git_loop'
     environment:
       GIT_REPOSITORY_CACHE_DIR: /tmp/git
       PROTECT_STDOUT: 'true'
