--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,7 @@ ruby_image: &ruby_image
     BUNDLE_RETRY: 3
     BUNDLE_PATH: vendor/bundle
     RAILS_ENV: test
-    SHIPMENT_TRACKER_DATABASE_NAME: shipment_tracker_test
-    SHIPMENT_TRACKER_DATABASE_HOST: 127.0.0.1
-    SHIPMENT_TRACKER_DATABASE_USERNAME: st_test
-    SHIPMENT_TRACKER_DATABASE_PASSWORD: ""
+    DATABASE_URL: postgresql://st_test@127.0.0.1/shipment_tracker_test
     CODECLIMATE_REPO_TOKEN: $CODECLIMATE_REPO_TOKEN
     CC_TEST_REPORTER_ID: $CODECLIMATE_REPO_TOKEN
 
@@ -75,7 +72,6 @@ jobs:
       - *restore_gems
       - *bundle_install
       - *cache_gems
-      - run: bundle exec rake db:create_database_yml
       - run: bundle exec rake db:setup
       - run:
           name: Run specs
@@ -101,7 +97,6 @@ jobs:
       - *restore_gems
       - *bundle_install
       - *cache_gems
-      - run: bundle exec rake db:create_database_yml
       - run: bundle exec rake db:setup
       - run:
           name: Run features
