--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,6 +136,32 @@ jobs:
             ./tmp/cc-test-reporter sum-coverage tmp/codeclimate.*.json -p 2 -o tmp/codeclimate.total.json
             ./tmp/cc-test-reporter upload-coverage -i tmp/codeclimate.total.json -r $CODECLIMATE_REPO_TOKEN
 
+  publish-docker-image:
+    docker:
+      - image: docker:stable-git
+    steps:
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - checkout
+      - run:
+          name: Login to Docker registry
+          command: echo "$DOCKER_PASSWORD" | docker login --username="$DOCKER_USERNAME" --password-stdin $DOCKER_REGISTRY
+      - run:
+          name: Build Docker image
+          command: docker build . --build-arg BUNDLE_GEM__FURY__IO --tag $CIRCLE_PROJECT_REPONAME --pull
+      - run:
+          name: Push to Docker registry
+          command: |
+            docker run \
+              --env CIRCLE_BRANCH \
+              --env CIRCLE_BUILD_NUM \
+              --env CIRCLE_SHA1 \
+              --env CIRCLE_PROJECT_REPONAME \
+              --env DOCKER_USER="$DOCKER_USERNAME" \
+              --env DOCKER_PASS="$DOCKER_PASSWORD" \
+              --volume /var/run/docker.sock:/var/run/docker.sock \
+              quay.io/fundingcircle/docker-scripts:latest docker/ci-docker-publish
+
 workflows:
   version: 2
   commit:
@@ -154,3 +180,5 @@ workflows:
           requires:
             - specs
             - features
+      - publish-docker-image:
+          context: org-global
