--- a/dropzone.yaml
+++ b/dropzone.yaml
@@ -12,11 +12,11 @@ deploy_tasks:
         cpus: 0.25
         mem: 256
         args: ["bundle", "exec", "rake", "jobs:work"]
-      - id: update_events_loop
+      - id: update-events-loop
         cpus: 0.25
         mem: 256
         args: ["bundle", "exec", "rake", "jobs:update_events_loop"]
-      - id: git_worker 
+      - id: git-worker
         cpus: 0.25
         mem: 256
         args: ["bundle", "exec", "rake", "jobs:update_git_loop"]
