--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,7 +145,7 @@ jobs:
           command: echo "$DOCKER_PASSWORD" | docker login --username="$DOCKER_USERNAME" --password-stdin $DOCKER_REGISTRY
       - run:
           name: Build Docker image
-          command: docker build . --build-arg BUNDLE_GEM__FURY__IO --tag $CIRCLE_PROJECT_REPONAME --pull
+          command: docker build . --tag $CIRCLE_PROJECT_REPONAME --pull
       - run:
           name: Push to Docker registry
           command: |
