--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: shipment_tracker
     command: >
       sh -c 'bundle exec rake db:structure:load && \
-             exec bundle exec rails server --binding=0.0.0.0 --port 1201'
+             exec bundle exec unicorn --config-file config/unicorn.rb'
     environment:
       AUTH0_CLIENT_ID: Y9ltgcdXUkNA4hRDWuP0nxDaZVdIskBM
       AUTH0_CLIENT_SECRET:
