--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -98,6 +98,10 @@ Style/FrozenStringLiteralComment:
 Style/DoubleNegation:
   Enabled: false
 
+Style/GlobalVars:
+  AllowedVariables:
+    - $healthcheck
+
 Naming/HeredocDelimiterNaming:
   Exclude:
     - 'spec/**/*'
