--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,9 @@ services:
       DATABASE_URL: postgresql://postgres:postgres@postgres/shipment_tracker
       GITHUB_REPO_READ_TOKEN:
       GIT_REPOSITORY_CACHE_DIR: /tmp/git
+      HONEYBADGER_API_KEY:
+      HONEYBADGER_ENV: development
+      HONEYBADGER_REPORT_DATA: 'true'
       PORT_HTTP: 1201
       PROTECT_STDOUT: 'true'
       RAILS_ENV: "${RAILS_ENV:-development}"
