Add public-http tag for the web service
It needs to be public for CircleCI which does not provide a list of
static IPs for us to whitelist.

--- a/dropzone.yaml
+++ b/dropzone.yaml
@@ -56,7 +56,7 @@ deploy_tasks:
             timeoutSeconds: 20
             maxConsecutiveFailures: 3
         labels:
-          tags: http
+          tags: http,public-http
           overrideTaskName: shipment-tracker
   postgres:
     migrations_path: /app/docker/run_migrations.sh
