--- a/dropzone.yaml
+++ b/dropzone.yaml
@@ -27,10 +27,12 @@ deploy_tasks:
         cpus: 0.25
         mem: 256
         args: ["bundle", "exec", "rake", "jobs:update_events_loop"]
+        taskKillGracePeriodSeconds: 30
       - id: git-worker
         cpus: 0.25
         mem: 256
         args: ["bundle", "exec", "rake", "jobs:update_git_loop"]
+        taskKillGracePeriodSeconds: 30
         container:
           volumes:
             - *git_volume
