--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,6 +92,7 @@ services:
 
   postgres:
     image: postgres:9.4-alpine
+    command: postgres -c log_statement=all
     environment:
       POSTGRES_DB: shipment_tracker
     volumes:
