--- a/dropzone.yaml
+++ b/dropzone.yaml
@@ -29,11 +29,17 @@ deploy_tasks:
         cpus: 0.25
         mem: 256
         args: ["bundle", "exec", "rake", "jobs:work"]
+        container:
+          volumes:
+            - *git_volume
       - id: event-worker
         cpus: 0.25
         mem: 256
         args: ["bundle", "exec", "rake", "jobs:update_events_loop"]
         taskKillGracePeriodSeconds: 30
+        container:
+          volumes:
+            - *git_volume
       - id: git-worker
         cpus: 0.25
         mem: 256
