--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ install_system_packages: &install_system_packages
     name: Install system packages
     command: |
       sudo apt-get update -qq
-      sudo apt-get install -qqy cmake postgresql-client
+      sudo apt-get install -qqy cmake libssl-dev postgresql-client
 
 restore_gems: &restore_gems
   restore_cache:
