Load secrets from Vault during deployment
This enables other actions to occur based on the secrets returned from
Vault for the application.

--- a/dropzone.yaml
+++ b/dropzone.yaml
@@ -27,6 +27,9 @@ vars:
     web_instances: 2
     web_memory: 512
 
+vault:
+  path: shipment_tracker/secrets
+
 deploy_tasks:
   shipment_tracker:
     enabled: true
