Bust the circleci cache for bundled rubygems
Some of the libraries this project relies on have native extensions which have been built on ruby 2.3. As such these extensions are not compatible with ruby 2.5 because they're expecting to include ruby 2.3 (which is no longer avialable).

As such we need to create a new cache for the rubygems bundled on ruby 2.5, the suggested way to do so from CircleCI is to increment a version inside your key name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ install_system_packages: &install_system_packages
 
 restore_gems: &restore_gems
   restore_cache:
-    key: shipment_tracker-gems-{{ checksum "Gemfile.lock" }}
+    key: shipment_tracker-gems-v2-{{ checksum "Gemfile.lock" }}
 
 bundle_install: &bundle_install
   run:
@@ -39,7 +39,7 @@ bundle_install: &bundle_install
 
 cache_gems: &cache_gems
   save_cache:
-    key: shipment_tracker-gems-{{ checksum "Gemfile.lock" }}
+    key: shipment_tracker-gems-v2-{{ checksum "Gemfile.lock" }}
     paths:
       - vendor/bundle
 
