--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,7 +147,12 @@ jobs:
           command: echo "$DOCKER_PASSWORD" | docker login --username="$DOCKER_USERNAME" --password-stdin $DOCKER_REGISTRY
       - run:
           name: Build Docker image
-          command: docker build . --tag $CIRCLE_PROJECT_REPONAME --pull
+          command: |
+            docker build . \
+              --tag $CIRCLE_PROJECT_REPONAME \
+              --pull \
+              --build-arg NAME=$CIRCLE_PROJECT_REPONAME \
+              --build-arg REVISION=$CIRCLE_SHA1
       - run:
           name: Push to Docker registry
           command: |
